src/objects/MX_SB_VTS_ProveedoresCTI__c.object
<CustomObject>
    <description>Objeto para registrar y dar de altas Proveedores de llamadas</description>
    <fields>
        <fullName>MX_SB_VTS_Identificador_Proveedor__c</fullName>
        <description>Identificador único de proveedores</description>
        <inlineHelpText>Seleccione un valor de la lista, si el valor que necesita no existe, por favor delo de alta en la lista global de Proveedores</inlineHelpText>
        <label>Identificador Proveedor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MX_SB_VTS_Lista_Proveedores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_IsReadyCTI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si el proveedor esta preparado para la integración con Salesforce</description>
        <label>CTI Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_PasswordProveedor__c</fullName>
        <description>Clave de consumo de servicios Post/Rest</description>
        <label>Contraseña</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Proveedor_Adminstrado__c</fullName>
        <defaultValue>$Label.MX_SB_VTS_ProveedorAdministrado</defaultValue>
        <description>Campo para filtrar resultados al Administrador</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proveedor Adminstrado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_TieneSegmento__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que indica si el proveedor permite la segmentación de campañas</description>
        <label>Segmentado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_UrlServicesCTI__c</fullName>
        <description>Url del servicio expuesto de CTI</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Url Servicio</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_UsuarioProveedor__c</fullName>
        <description>Usuario de conexión a servicios del proveedor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Usuario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ProveedorCTI</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>MX_SB_ProveedoresList</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Proveedores</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Proveedores</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProveedoresCTI</pluralLabel>
    <recordTypes>
        <fullName>MX_SB_VTS_ProveedoresCTI</fullName>
        <active>true</active>
        <description>Registro default</description>
        <label>ProveedoresCTI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>